Enable mouse scrolling in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,3 +34,6 @@ bind l select-pane -R
 # map movement to vim keybindings
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
+# enable mouse scrolling
+set -g mouse on
