fix(tmux): Fix issue with tmux sending backspaces as spaces

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,3 +37,6 @@ bind -r C-l select-window -t :+
 
 # enable mouse scrolling
 set -g mouse on
+
+# Fix issue with backspace, from https://stackoverflow.com/questions/51488920/backspace-not-working-in-tmux-command-prompt
+set -g default-terminal "xterm-256color"
