Update dotfiles and config files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 
 # keybinding for loading tmux configurations on change
-bind r source-file ~/.tmux.conf\; display "Tmux reloaded";
+bind r source-file ~/.tmux.conf\; display "Tmux config reloaded from ~/.tmux.conf";
 
 # Can send C-a to other apps
 bind C-a send-prefix
