Add Tmux package manager (tpm) config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,16 @@ bind -r C-l select-window -t :+
 
 # enable mouse scrolling
 set -g mouse on
+setw -g mouse on
 
 # Fix issue with backspace, from https://stackoverflow.com/questions/51488920/backspace-not-working-in-tmux-command-prompt
 set -g default-terminal "xterm-256color"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# TPM https://github.com/tmux-plugins/tpm
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
