Update tmux config with theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-
 # map movement to vim keybindings
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -39,14 +38,26 @@ bind -r C-l select-window -t :+
 set -g mouse on
 setw -g mouse on
 
-# Fix issue with backspace, from https://stackoverflow.com/questions/51488920/backspace-not-working-in-tmux-command-prompt
+#// Fix issue with backspace, from https://stackoverflow.com/questions/51488920/backspace-not-working-in-tmux-command-prompt
 set -g default-terminal "xterm-256color"
 
-# List of plugins
+#// List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# TPM https://github.com/tmux-plugins/tpm
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+
+#// Theme config
+set -g @dracula-show-powerline true
+set -g @dracula-plugins "ram-usage cpu-usage battery time"
+set -g @dracula-military-time false
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+
+#// Display related config
+set -g status-position top
+
+#// TPM https://github.com/tmux-plugins/tpm
+#// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
