--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,8 @@ set -g default-terminal "xterm-256color"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
@@ -58,6 +60,10 @@ set -g @dracula-show-left-icon session
 #// Display related config
 set -g status-position top
 
+#  Plugin config for tmux-continuum
+set -g @continuum-boot 'on'
+
 #// TPM https://github.com/tmux-plugins/tpm
 #// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
