--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,7 @@ set -g status-position top
 
 #  Plugin config for tmux-continuum
 set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm'
 
 #// TPM https://github.com/tmux-plugins/tpm
 #// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
