--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,11 +43,15 @@ set -g default-terminal "xterm-256color"
 
 #// List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+
+# Other themes
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Theme plugin
+set -g @plugin 'dracula/tmux'
 
 
 #// Theme config
