--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,15 +51,26 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Theme plugin
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'frappe'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
 
-#// Theme config
-set -g @dracula-show-powerline true
-set -g @dracula-plugins "ram-usage cpu-usage battery time"
-set -g @dracula-military-time false
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 #// Display related config
 set -g status-position top
@@ -71,4 +82,3 @@ set -g @continuum-boot-options 'iterm'
 #// TPM https://github.com/tmux-plugins/tpm
 #// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
