feat(tmux): config for continuum terminal on boot

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -75,9 +75,10 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 #// Display related config
 set -g status-position top
 
-#  Plugin config for tmux-continuum
+#  Plugin config for tmux-resurrect and tmux-continuum
+set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'iterm'
+set -g @continuum-boot-options 'kitty,fullscreen'
 
 #// TPM https://github.com/tmux-plugins/tpm
 #// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
