--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,3 +1,13 @@
+### configure Tmux Plugin Manager
+set-environment -gF TMUX_PLUGIN_MANAGER_PATH '#{HOME}/.tmux/plugins/'
+
+# Install tmp if not installed
+if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
+  run 'mkdir -p "${TMUX_PLUGIN_MANAGER_PATH}"'
+  run 'git clone https://github.com/tmux-plugins/tpm "${TMUX_PLUGIN_MANAGER_PATH}/tpm"'
+  run '${TMUX_PLUGIN_MANAGER_PATH}/tpm/bin/install_plugins'
+}
+
 # Set prefix command to C-a
 set -g prefix C-a
 
@@ -30,18 +40,17 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# map movement to vim keybindings
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
 # enable mouse scrolling
 set -g mouse on
 setw -g mouse on
 
+# Display related config
+set -g status-position top
+
 #// Fix issue with backspace, from https://stackoverflow.com/questions/51488920/backspace-not-working-in-tmux-command-prompt
 set -g default-terminal "xterm-256color"
 
-#// List of plugins
+# Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 
 # Other themes
@@ -50,36 +59,56 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+
 # Theme plugin
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+set -g status-left-length 100
+set -g status-left ""
 
-set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
+set -g status-right-length 100
+set -g status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] #{E:@catppuccin_status_session}"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_window_number_position 'right'
 
-#// Display related config
-set -g status-position top
+set -g @catppuccin_window_left_separator ''
+set -g @catppuccin_window_right_separator ' '
+set -g @catppuccin_window_middle_separator ' █'
 
-#  Plugin config for tmux-resurrect and tmux-continuum
+set -g @catppuccin_window_default_fill 'number'
+set -g @catppuccin_window_default_text '#W'
+
+set -g @catppuccin_window_current_fill 'number'
+set -g @catppuccin_window_current_text '#W'
+
+# set -g @catppuccin_status_modules_right 'directory user host session'
+set -g @catppuccin_status_left_separator  ' '
+set -g @catppuccin_status_right_separator ''
+set -g @catppuccin_status_fill 'icon'
+set -g @catppuccin_status_connect_separator 'no'
+
+set -g @catppuccin_directory_text '#{pane_current_path}'
+
+# Load catppuccin
+run '${TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
+
+####################
+#  Plugin config for tmux-continuum
+####################
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'kitty,fullscreen'
+set -g @continuum-boot-options 'ghostty,fullscreen'
 
+####################
+# Run tpm 
+####################
 #// TPM https://github.com/tmux-plugins/tpm
 #// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
