--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -45,7 +45,7 @@ set -g mouse on
 setw -g mouse on
 
 # Display related config
-set -g status-position top
+set -g status-position bottom
 
 #// Fix issue with backspace, from https://stackoverflow.com/questions/51488920/backspace-not-working-in-tmux-command-prompt
 set -g default-terminal "xterm-256color"
@@ -53,7 +53,7 @@ set -g default-terminal "xterm-256color"
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# Other themes
+# Plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -62,39 +62,71 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Theme plugin
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'frappe'
+set -g @catppuccin_flavour 'macchiato'
 
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
 set -g @catppuccin_pane_status_enabled "off"
 set -g @catppuccin_pane_border_status "off"
 
+
+# Status line left
 set -g status-left-length 100
 set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
-set -g status-right-length 100
-set -g status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] #{E:@catppuccin_status_session}"
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
 
-set -g @catppuccin_window_number_position 'right'
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
 
-set -g @catppuccin_window_left_separator ''
-set -g @catppuccin_window_right_separator ' '
-set -g @catppuccin_window_middle_separator ' █'
 
-set -g @catppuccin_window_default_fill 'number'
-set -g @catppuccin_window_default_text '#W'
+# Set Pane styling
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
 
-set -g @catppuccin_window_current_fill 'number'
-set -g @catppuccin_window_current_text '#W'
+set -g pane-border-status bottom
+set -g pane-border-style fg=colour0
+set -g pane-active-border-style fg=colour0
 
-# set -g @catppuccin_status_modules_right 'directory user host session'
-set -g @catppuccin_status_left_separator  ' '
-set -g @catppuccin_status_right_separator ''
-set -g @catppuccin_status_fill 'icon'
-set -g @catppuccin_status_connect_separator 'no'
 
-set -g @catppuccin_directory_text '#{pane_current_path}'
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+
+
+# set -g @catppuccin_window_number_position 'right'
+# set -g @catppuccin_window_left_separator ''
+# set -g @catppuccin_window_right_separator ' '
+# set -g @catppuccin_window_middle_separator ' █'
+
+# set -g @catppuccin_window_default_fill 'number'
+# set -g @catppuccin_window_default_text '#W'
+
+# set -g @catppuccin_window_current_fill 'number'
+# set -g @catppuccin_window_current_text '#W'
+# set -ogq @catppuccin_window_current_number_color "#{@thm_green}"
+
+# # set -g @catppuccin_status_modules_right 'directory user host session'
+# set -g @catppuccin_status_left_separator  ' '
+# set -g @catppuccin_status_right_separator ''
+# set -g @catppuccin_status_fill 'icon'
+# set -g @catppuccin_status_connect_separator 'no'
+
+# set -g @catppuccin_directory_text '#{pane_current_path}'
 
 # Load catppuccin
 run '${TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
@@ -102,12 +134,13 @@ run '${TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
 ####################
 #  Plugin config for tmux-continuum
 ####################
-set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'ghostty,fullscreen'
+# set -g @continuum-restore 'on'
+# set -g @continuum-boot 'on'
+# set -g @continuum-boot-options 'ghostty,fullscreen'
+
 
 ####################
-# Run tpm 
+# Run tpm
 ####################
 #// TPM https://github.com/tmux-plugins/tpm
 #// Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
