--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -73,18 +73,15 @@ set -g @catppuccin_pane_border_status "off"
 # Status line left
 set -g status-left-length 100
 set -g status-left ""
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[fg=#{@thm_green}]  #S }}"
 
+# Status line right
+set -g status-right ""
+set -ga status-right "#[fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-right "#[fg=#{@thm_overlay_0},none]│"
+set -ga status-right "#[fg=#{@thm_maroon}]  #{pane_current_command} "
 
-set -g status-style "bg=#{@thm_bg}"
 set -g status-justify "absolute-centre"
-
 
 # Set Pane styling
 setw -g pane-border-format ""
@@ -92,19 +89,19 @@ setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
 setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
 setw -g pane-border-lines single
 
-set -g pane-border-status bottom
-set -g pane-border-style fg=colour0
-set -g pane-active-border-style fg=colour0
+# set -g pane-border-status bottom
+# set -g pane-border-style fg=colour0
+# set -g pane-active-border-style fg=colour0
 
 
 set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
-set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
-set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+# set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+# set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+# set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
 set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
-set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+# set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 
-set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window}, | #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
 
