--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -105,35 +105,15 @@ set -g window-status-current-format " #I#{?#{!=:#{window_name},Window}, | #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
 
-# set -g @catppuccin_window_number_position 'right'
-# set -g @catppuccin_window_left_separator ''
-# set -g @catppuccin_window_right_separator ' '
-# set -g @catppuccin_window_middle_separator ' █'
-
-# set -g @catppuccin_window_default_fill 'number'
-# set -g @catppuccin_window_default_text '#W'
-
-# set -g @catppuccin_window_current_fill 'number'
-# set -g @catppuccin_window_current_text '#W'
-# set -ogq @catppuccin_window_current_number_color "#{@thm_green}"
-
-# # set -g @catppuccin_status_modules_right 'directory user host session'
-# set -g @catppuccin_status_left_separator  ' '
-# set -g @catppuccin_status_right_separator ''
-# set -g @catppuccin_status_fill 'icon'
-# set -g @catppuccin_status_connect_separator 'no'
-
-# set -g @catppuccin_directory_text '#{pane_current_path}'
-
 # Load catppuccin
 run '${TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
 
 ####################
 #  Plugin config for tmux-continuum
 ####################
-# set -g @continuum-restore 'on'
-# set -g @continuum-boot 'on'
-# set -g @continuum-boot-options 'ghostty,fullscreen'
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'ghostty,fullscreen'
 
 
 ####################
