feat(tmux): Add tmux-sessionx plugin

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -58,6 +58,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'omerxx/tmux-sessionx'
+
+set -g @sessionx-bind 'o'
+set -g @sessionx-fzf-builtin-tmux 'off'
+set -g @sessionx-custom-paths '/Users/amaalali/Developer/amaal, /Users/amaalali/Developer/hmrc'
+set -g @sessionx-custom-paths-subdirectories 'true'
+set -g @sessionx-preview-enabled 'false'
 
 
 # Theme plugin
