feat(tmux) change tmux prefix

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,7 +9,7 @@ if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
 }
 
 # Set prefix command to C-a
-set -g prefix C-a
+set -g prefix C-Space
 
 # Free original prefix binding C-b
 unbind C-b
