feat(tmux) add shortcut for search up in copy mode

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -40,6 +40,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# alias for search upwards
+bind-key / copy-mode \; send-key ?
+
 # enable mouse scrolling
 set -g mouse on
 setw -g mouse on
