chore(tmux) use setw over longer command and remove commented out code

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -21,8 +21,7 @@ set -s escape-time 1
 set -g base-index 1
 
 # set base index for panes to 1 instead of 0
-# Alternative: setw -g pane-base-index 1
-set-window-option -g pane-base-index 1
+setw -g pane-base-index 1
 
 # keybinding for loading tmux configurations on change
 bind r source-file ~/.tmux.conf\; display "Tmux config reloaded from ~/.tmux.conf";
@@ -104,12 +103,7 @@ setw -g pane-border-lines single
 
 
 set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-# set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
-# set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
-# set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
 set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
-# set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
-
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window}, | #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
