feat(tmux): Change sessionx shortcut key

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -61,7 +61,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'omerxx/tmux-sessionx'
 
-set -g @sessionx-bind 'o'
+set -g @sessionx-bind 'Space'
 set -g @sessionx-fzf-builtin-tmux 'off'
 set -g @sessionx-custom-paths '/Users/amaalali/Developer/amaal, /Users/amaalali/Developer/hmrc'
 set -g @sessionx-custom-paths-subdirectories 'true'
